--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 -->
 <html>
 	<head>
-		<title>vitaforas</title>
+		<title>ColourFuel⛽</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,7 +28,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>vitaforas</h1>
+								<h1> >Colour Fuel ⛽ Official Website< </h1>
 
               <p><img src="LOGO.png"></p>                                                    <p>📲 <a href="https://www.paypal.com/qrcodes/managed/4b33b22e-bd07-46af-9950-01802bd2d5a0?utm_source=consapp_download"> Donate us</a> 🍀<br /> </p>               
   <a href="https://">  
