--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1> >Colour Fuel ⛽ Official Website< </h1>
+								<h1> Colour Fuel ⛽ 
+<p> >Official Website< </p> </h1>
 
               <p><img src="LOGO.png"></p>                                                    <p>📲 <a href="https://www.paypal.com/qrcodes/managed/4b33b22e-bd07-46af-9950-01802bd2d5a0?utm_source=consapp_download"> Donate us</a> 🍀<br /> </p>               
   <a href="https://">  
