--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 								<h1> Colour Fuel ⛽ 
 <p> >Official Website< </p> </h1>
 
-              <p><img src="LOGO.png"></p>                                                    <p>📲 <a href="https://www.paypal.com/qrcodes/managed/4b33b22e-bd07-46af-9950-01802bd2d5a0?utm_source=consapp_download"> Donate us</a> 🍀<br /> </p>               
+              <p><img src="LOGO.png"></p>   
+
+<p>  Jetzt online und bald auch in Ihrer Stadt.</p>  
+( Tabakwaren Geschäfte, Tankstellen & Kiosk )                                          <p>📲 <a href="https://www.paypal.com/qrcodes/managed/4b33b22e-bd07-46af-9950-01802bd2d5a0?utm_source=consapp_download"> Donate us</a> 🍀<br /> </p>               
   <a href="https://">  
    <p> </a> </p> 
                                              <p>💻 <a href="https://www.paypal.com/paypalme/vitaforas"> Donate us</a> 💫<br /> </p>               
