Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -34,13 +34,7 @@
               <p><img src="LOGO.png"></p>   
 
 <p>  Jetzt online und bald auch in Ihrer Stadt.</p>  
-( In Kiosk, Tabakwaren Geschäft & Tankstellen )                                       <p>📲 <a href="https://www.paypal.com/qrcodes/managed/4b33b22e-bd07-46af-9950-01802bd2d5a0?utm_source=consapp_download"> Donate us</a> 🍀<br /> </p>               
-  <a href="https://">  
-   <p> </a> </p> 
-                                             <p>💻 <a href="https://www.paypal.com/paypalme/vitaforas"> Donate us</a> 💫<br /> </p>               
-  <a href="https://">  
-   <p> </a> </p> 
-
+( In Kiosk, Tabakwaren Geschäft & Tankstellen ) 
  <p>  
 [[• In God WE Trust •]]
  </p> 
@@ -212,6 +206,16 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
                                                                <p>👉🏻 <a href="https://youtube.com/@vitaforas2869?feature=shared"> visit vitaforas on YouTube</a> 🔍<br /> </p>     
 
 <p> </p> 
+
+
+                                      <p>📲 <a href="https://www.paypal.com/qrcodes/managed/4b33b22e-bd07-46af-9950-01802bd2d5a0?utm_source=consapp_download"> Donate us</a> 🍀<br /> </p>               
+  <a href="https://">  
+   <p> </a> </p> 
+                                             <p>💻 <a href="https://www.paypal.com/paypalme/vitaforas"> Donate us</a> 💫<br /> </p>               
+  <a href="https://">  
+   <p> </a> </p> 
+
+
 
 	<p>
 
