Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
               <p><img src="LOGO.png"></p>   
 
-<p>  Jetzt online und bald auch in Ihrer Stadt.</p>  
+<p>  Jetzt online und bald auch in Ihrer Nähe.</p>  
 ( In Kiosk, Tabakwaren Geschäft & Tankstellen ) 
  <p>  
 [[• In God WE Trust •]]
