Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								<h1> Colour Fuel ⛽ 
 <p> >Official Website< </p> </h1>
 
-              <p><img src="LOGO.png"></p>   
+              <p><img src="logox.png"></p>   
 
 <p>  Jetzt online und bald auch in Ihrer Nähe.</p>  
 ( In Kiosk, Tabakwaren Geschäft & Tankstellen ) 
