Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 								<h1> Colour Fuel ⛽ 
 <p> >Official Website< </p> </h1>
 
+<img src="logox.png" alt="9910" width="35%" height="auto">
+
               <p><img src="logox.png"></p>   
 
 <p>  Jetzt online und bald auch in Ihrer Nähe.</p>  
