Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <img src="logox.png" alt="9910" width="35%" height="auto">
 
-              <p><img src="logox.png"></p>   
+              <p></p>   
 
 <p>  Jetzt online und bald auch in Ihrer Nähe.</p>  
 ( In Kiosk, Tabakwaren Geschäft & Tankstellen ) 
@@ -129,8 +129,11 @@ vitaforas begann als kleines Unternehmen, das von zuhause aus betrieben wurde. W
 Made with pride in Germany 🇩🇪
 </p>
 
+<img src="LOGO.png">
+
  <p>         
-</p>Unsere Produkte werden mit umweltfreundlichen, recyclebaren Verpackungen angeboten, um den Ansprüchen an Nachhaltigkeit gerecht zu werden. Wir bieten 5 verschiedene Farben (blau, gelb, grün, rot, lila) & Flaschen in verschiedenen Größen an, darunter 20 ml, 100 ml, 250 ml und 500 ml. Alle unsere Produkte werden in Deutschland hergestellt.
+</p>
+Unsere Produkte werden mit umweltfreundlichen, recyclebaren Verpackungen angeboten, um den Ansprüchen an Nachhaltigkeit gerecht zu werden. Wir bieten 5 verschiedene Farben (blau, gelb, grün, rot, lila) & Flaschen in verschiedenen Größen an, darunter 20 ml, 100 ml, 250 ml und 500 ml. Alle unsere Produkte werden in Deutschland hergestellt.
 
 
  <p>         
