Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -220,7 +220,11 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
   <a href="https://">  
    <p> </a> </p> 
 
+visit vitaforas.de
+<a href="https://vitaforas.de"> 
+<img src="LOGO.png" alt="7" width="100%" height="auto"></a>
 
+              <p></p>   
 
 	<p>
 
