Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -324,14 +324,18 @@ Discribe as Donation
          
 <p> 
 </p>
-
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="pink.jpg" alt="7" width="100%" height="auto"></a>
 	<p>
 </p>
 
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="grün.jpg" alt="7" width="100%" height="auto"></a>
 	<p>
 </p>
 
-	<p>
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	<p>
 </p>
 
 	<p>
