Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -280,6 +280,22 @@ Discribe as Donation
 </p>
 	<p>
 
+      
+<p> 
+</p>
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="pink.jpg" alt="7" width="100%" height="auto"></a>
+	<p>
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="grün.jpg" alt="7" width="100%" height="auto"></a>
+	<p>
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
+
 </p>
 	<p>
 
@@ -321,21 +337,7 @@ Discribe as Donation
  <p>  
  In God WE Trust ♥️
  </p>
-         
-<p> 
-</p>
-<a href="https://www.ebay.de/usr/vitaforas">
-<img src="pink.jpg" alt="7" width="100%" height="auto"></a>
-	<p>
-</p>
-
-<a href="https://www.ebay.de/usr/vitaforas">
-<img src="grün.jpg" alt="7" width="100%" height="auto"></a>
-	<p>
-</p>
-
-<a href="https://www.ebay.de/usr/vitaforas">
-<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	<p>
+   <p>
 </p>
 
 	<p>
