Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 <img src="https://123.vitaforas.de/b2.jpg" alt="7" width="100%" height="auto"></a>
 
 
+<p>         
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas"> 
+<img src="UmsatzFEB.jpg" alt="7" width="100%" height="auto"></a>
+
+<p>         
+</p>
+
 	<form name="eKiwiButton">
 <input type="button" value="🛒🛍️" onClick="self.location.href=('https://www.ebay.de/usr/vitaforas')">
 </form>          
