Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -183,12 +183,18 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 	<p>        
 </p>     
 
-
+or Pay via Paypal (Verwendungszweck=Bestellung)
 
 <p> 
 
 </p>         
  
+<p>         
+</p>
+
+<a href="https://www.paypal.me/vitaforas"> 
+<img src="paypal.png" alt="7" width="100%" height="auto"></a>
+
 <p> 
 </p>         
  
