Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -180,7 +180,11 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 	<form name="eKiwiButton">
 <input type="button" value="🛒🛍️" onClick="self.location.href=('https://www.ebay.de/usr/vitaforas')">
 </form>          
-	<p>        
+	<p>     
+Menge: 20ml je 5€, 100ml je 20€, 125ml je 27,99€, 500ml je 70€
+       
+	</p>         
+	<p>    Farben: Blau, Gelb, Rot, Grün, Lila  
 </p>     
 
 or Pay via Paypal (Verwendungszweck=Bestellung)
