Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 </p>
 Colour Fuel, ist Teil des vitaforas e.V. & stolz darauf, buntes Benzin herzustellen und zu vertreiben. Unser farbiges Kerosin ist das Ergebnis einer einzigartigen und gut geschützten Rezeptur, die zu den lebendigen Farbergebnissen führt. Als einziger Vertrieb für dieses Produkt in Deutschland bieten wir Ihnen die Möglichkeit, Bestellungen aufzugeben und dieses farbenfrohe Benzin zu kaufen. Vervollständigen Sie endlich ihre Schatzsammlung. Bestellen Sie noch heute unser Feuerzeug Benzin für Wattefreie Retro-Feuerzeuge mit Sichtfenster. Präsentieren & veredeln Sie Ihre Sammlerstücke mit unserem einzigartigen Produkt.
 
+
+<a href="https://www.gs1.org/services/verified-by-gs1/results">
+<img src="EAN1.jpg" alt="7" width="100%" height="auto"></a>
+
  <p>         
 </p>
 Neben dem Verkauf von farbigem Kerosin sind wir ebenfalls in den Bereichen Web-Services sowie Datenschutz und -sicherheit & mehr tätig. Wir bieten Schulungen und Beratungen zu Themen wie VPN, Webbrowser, Künstliche Intelligenz (Einkaufsanalyse), Cloud- und Web-Dienste, Speicheroptimierung und Grafikdesign an. Unsere Dienstleistungen umfassen auch den Aufbau und die Verwaltung von Servern, den Schutz von Daten vor dem Verkauf, sowie Proxy- und Tor-Dienste für sichere Datentunnel.
