--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ or Pay via Paypal (Verwendungszweck=Bestellung+Lieferadresse)
 
 <p> 
 </p>         
- 
+ Scan Me 📱
 <a href="https://www.gs1.org/services/verified-by-gs1/results">
 <img src="EAN1.jpg" alt="7" width="100%" height="auto"></a>
 
