Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -110,10 +110,7 @@ Neben dem Verkauf von farbigem Kerosin sind wir ebenfalls in den Bereichen Web-S
 
 
 
-   >BLUE Fuel | Official Website<                                                                     <p></p>              
-                                                   👉🏻 <a href="https://wnhhhdwbm37fvoxqgr55z7beuxivlndyzr6xsruh7hp2e52ytvofsiad.onion/"> visit via TOR Browser</a> 🔍<br />                
-  
-Die sichere Art zu handeln. Teste es jetzt.
+   
 
  <p>         
 </p>
@@ -131,15 +128,20 @@ Made with pride in Germany 🇩🇪
 
  <p>         
 </p>
-Unsere Produkte werden mit umweltfreundlichen, recyclebaren Verpackungen angeboten, um den Ansprüchen an Nachhaltigkeit gerecht zu werden. Wir bieten 5 verschiedene Farben (blau, gelb, grün, rot, lila) & Flaschen in verschiedenen Größen an, darunter 20 ml, 100 ml, 250 ml und 500 ml. Alle unsere Produkte werden in Deutschland hergestellt.
+Unsere Produkte werden mit umweltfreundlichen, recyclebaren Verpackungen angeboten, um den Ansprüchen an Nachhaltigkeit gerecht zu werden.
+
+ <p>         
+Wir bieten 6 verschiedene Farben          
+(blau, gelb, grün, rot, lila, *pink) & Flaschen in verschiedenen Größen an, darunter 20 ml, 100 ml, 125ml, 250 ml, (*300ml in Geschenk 🎁 Verpackung für Freunde [Sonderedition in 'pink']) und 500 ml.          
+</p>
 
 
  <p>         
 </p>
-# Colour Fuel - Blaues Benzin. (Bunt) farbiges Kerosin 'farbenfroh' Die formel ist eine Einzigartige gut bewahrte Rezeptur, Mischung die zu diesem farb Ergebnis führt. Einziger Vertrieb Verkauf in Deutschland bestellen Bestellung kaufen
+# Colour Fuel - (Bunt) farbiges Kerosin *Naphta Colorierter Kraftstoff 'farbenfroh' Die formel ist eine Einzigartige gut bewahrte Rezeptur, Mischung die zu diesem farb Ergebnis führt. Einziger Vertrieb Verkauf in Deutschland bestellen Bestellung kaufen
 Farbig bunt buntes farbiges kerosin Benzin färben von sprit zippo liquid flüssig Brennstoff Händler Unternehmen 
 Programmierer Marktlücke Erfindergeist Forschung Privat Schulung Wattefreie retro ww1 ww2 feuerzeug Sammlerstücke Ohne watte
-Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von zuhause versand Bestellungen Drop shipping, e commerze, web Design, server Administration, spiele Entwickler, hacker, daten verkauf, data privacy security, strict delete all, no user data, Aufbau unter dem Motto daten Sicherheit. Vpn, web browwser, ki (Einkausanalyse), cloud & web-Dienste, Speicher, grafiker,ip, ddns, proxy, tor, daten tunnel, Verpackungsdesign, ausbau, produktion. 'colour' blau rot lila violett grün gelb rot skyblue ocean blau 20ml 100ml 250ml 500ml Flaschen Gläschen Abfüllung Recyclebare Verpackung (low waste) 📬
+Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von zuhause versand Bestellungen Drop shipping, e commerze, web Design, server Administration, spiele Entwickler, hacker, daten verkauf, data privacy security, strict delete all, no user data, Aufbau unter dem Motto daten Sicherheit. Vpn, web browwser, ki (Einkausanalyse), cloud & web-Dienste, Speicher, grafiker,ip, ddns, proxy, tor, daten tunnel, Verpackungsdesign, ausbau, produktion. 'colour' blau rot lila violett grün gelb rot *pink skyblue ocean blau 20ml 100ml 250ml 500ml Flaschen Gläschen Dosen  Abfüllung in Recyclebare Verpackung (low waste) 📬
 
 
 <p>         
@@ -177,17 +179,6 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 <p>         
 </p>
 
-	<form name="eKiwiButton">
-<input type="button" value="🛒🛍️" onClick="self.location.href=('https://www.ebay.de/usr/vitaforas')">
-</form>          
-	<p>     
-Menge: 20ml je 5€, 100ml je 20€, 125ml je 27,99€, 500ml je 70€
-       
-	</p>         
-	<p>    Farben: Blau, Gelb, Rot, Grün, Lila  
-</p>     
-
-or Pay via Paypal (Verwendungszweck=Bestellung+Lieferadresse)
 
 <p> 
 
@@ -224,11 +215,27 @@ or Pay via Paypal (Verwendungszweck=Bestellung+Lieferadresse)
 
 
 
-
+>BLUE Fuel | Official Website<                                                                     <p></p>              
+                                                   👉🏻 <a href="https://wnhhhdwbm37fvoxqgr55z7beuxivlndyzr6xsruh7hp2e52ytvofsiad.onion/"> visit via TOR Browser</a> 🔍<br />                
+  
+Die sichere Art zu handeln. Teste es jetzt.
 <p>
 
 </p>
-                                                               <p>👉🏻 <a href="https://youtube.com/@vitaforas2869?feature=shared"> visit vitaforas on YouTube</a> 🔍<br /> </p>     
+      	<form name="eKiwiButton">
+<input type="button" value="🛒🛍️" onClick="self.location.href=('https://www.ebay.de/usr/vitaforas')">
+</form>          
+	<p>     
+Menge: 20ml je 5€, 100ml je 20€, 125ml je 27,99€, 500ml je 70€
+       
+	</p>         
+	<p>    Farben: Blau, Gelb, Rot, Grün, Lila  
+</p>     
+
+or Pay via Paypal (Verwendungszweck=Bestellung+Lieferadresse)
+
+
+                                                         <p>👉🏻 <a href="https://youtube.com/@vitaforas2869?feature=shared"> visit vitaforas on YouTube</a> 🔍<br /> </p>     
 
 <p> </p> 
 
