Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -210,15 +210,13 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Channel</h2>
+								<h2 class="major">Sortiment</h2>
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
 
 
 
->BLUE Fuel | Official Website<                                                                     <p></p>              
-                                                   👉🏻 <a href="https://wnhhhdwbm37fvoxqgr55z7beuxivlndyzr6xsruh7hp2e52ytvofsiad.onion/"> visit via TOR Browser</a> 🔍<br />                
-  
-Die sichere Art zu handeln. Teste es jetzt.
+>ColourFuel ⛽ Official Website<                                                                     <p></p>              
+                  
 <p>
 
 </p>
@@ -252,7 +250,9 @@ visit vitaforas.de
 <img src="LOGO.png" alt="7" width="100%" height="auto"></a>
 
               <p></p>   
-
+                                 👉🏻 <a href="https://wnhhhdwbm37fvoxqgr55z7beuxivlndyzr6xsruh7hp2e52ytvofsiad.onion/"> visit via TOR Browser</a> 🔍<br />                
+  
+Die sichere Art zu handeln. Teste es jetzt.
 	<p>
 
 </p>
