--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Colour Fuel, ist Teil des vitaforas e.V. & stolz darauf, buntes Benzin herzustel
 
  <p>         
 </p>
-Neben dem Verkauf von farbigem Kerosin sind wir ebenfalls in den Bereichen Web-Services sowie Datenschutz und -sicherheit & mehr tätig. Wir bieten Schulungen und Beratungen zu Themen wie VPN, Webbrowser, Künstliche Intelligenz (Einkaufsanalyse), Cloud- und Web-Dienste, Speicheroptimierung und Grafikdesign an. Unsere Dienstleistungen umfassen auch den Aufbau und die Verwaltung von Servern, den Schutz von Daten vor dem Verkauf, sowie Proxy- und Tor-Dienste für sichere Datentunnel.
+Neben dem Verkauf von farbigem Kerosin / Benzin (*Naphta) sind wir ebenfalls in den Bereichen Web-Services sowie Datenschutz und -sicherheit & mehr tätig. Wir bieten Schulungen und Beratungen zu Themen wie VPN, Webbrowser, Künstliche Intelligenz (Einkaufsanalyse), Cloud- und Web-Dienste, Speicheroptimierung und Grafikdesign an. Unsere Dienstleistungen umfassen auch den Aufbau und die Verwaltung von Servern, den Schutz von Daten, sowie Proxy- und Tor-Dienste für sichere Datentunnel.
 
 
  <p>         
@@ -95,15 +95,6 @@ Neben dem Verkauf von farbigem Kerosin sind wir ebenfalls in den Bereichen Web-S
  <p>         
 </p>Seien Sie stolz darauf, vitaforas zu unterstützen, das innovative Unternehmen mit Sitz in Deutschland! 🇩🇪
   
-
- <p>         
-</p>
- Klick 👇🏼 & Buy Colour Fuel ⛽
-	<p>
-</p>
-
-<a href="https://www.ebay.de/usr/vitaforas">
-<img src="order.jpg" alt="7" width="100%" height="auto"></a>
 
       <p>        
 </p>     
@@ -184,12 +175,6 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 
 </p>         
  
-<p>         
-</p>
-
-<a href="https://www.paypal.me/vitaforas"> 
-<img src="paypal.png" alt="7" width="100%" height="auto"></a>
-
 <p> 
 </p>         
  Scan Me 📱
@@ -230,10 +215,29 @@ Menge: 20ml je 5€, 100ml je 20€, 125ml je 27,99€, 500ml je 70€
 	<p>    Farben: Blau, Gelb, Rot, Grün, Lila  
 </p>     
 
+
+
+ <p>         
+</p>
+ Klick 👇🏼 & Buy Colour Fuel ⛽
+	<p>
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="order.jpg" alt="7" width="100%" height="auto"></a>
+
+             
+<p>         
+</p>
+
+<a href="https://www.paypal.me/vitaforas"> 
+<img src="paypal.png" alt="7" width="100%" height="auto"></a>
+
 or Pay via Paypal (Verwendungszweck=Bestellung+Lieferadresse)
-
-
-                                                         <p>👉🏻 <a href="https://youtube.com/@vitaforas2869?feature=shared"> visit vitaforas on YouTube</a> 🔍<br /> </p>     
+	<p>
+</p>
+                                          
+  <p>👉🏻 <a href="https://youtube.com/@vitaforas2869?feature=shared"> visit vitaforas on YouTube</a> 🔍<br /> </p>     
 
 <p> </p> 
 
