Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@ Wir bieten 6 verschiedene Farben
 </p>
 
 
+	<p>
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
+
  <p>         
 </p>
 # Colour Fuel - (Bunt) farbiges Kerosin *Naphta Colorierter Kraftstoff 'farbenfroh' Die formel ist eine Einzigartige gut bewahrte Rezeptur, Mischung die zu diesem farb Ergebnis führt. Einziger Vertrieb Verkauf in Deutschland bestellen Bestellung kaufen
@@ -216,6 +222,12 @@ Menge: 20ml je 5€, 100ml je 20€, 125ml je 27,99€, 500ml je 70€
 </p>     
 
 
+
+	<p>
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
 
  <p>         
 </p>
@@ -314,14 +326,15 @@ Discribe as Donation
 	<p>
 
       
+
+<p>         
+</p>
+
+<a href="https://www.paypal.me/vitaforas"> 
+<img src="paypal.png" alt="7" width="100%" height="auto"></a>
 <p> 
 </p>
 
-	<p>
-</p>
-
-<a href="https://www.ebay.de/usr/vitaforas">
-<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
 
 </p>
 	<p>
