Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
 </p>
 Colour Fuel, ist Teil des vitaforas e.V. & stolz darauf, buntes Benzin herzustellen und zu vertreiben. Unser farbiges Kerosin ist das Ergebnis einer einzigartigen und gut geschützten Rezeptur, die zu den lebendigen Farbergebnissen führt. Als einziger Vertrieb für dieses Produkt in Deutschland bieten wir Ihnen die Möglichkeit, Bestellungen aufzugeben und dieses farbenfrohe Benzin zu kaufen. Vervollständigen Sie endlich ihre Schatzsammlung. Bestellen Sie noch heute unser Feuerzeug Benzin für Wattefreie Retro-Feuerzeuge mit Sichtfenster. Präsentieren & veredeln Sie Ihre Sammlerstücke mit unserem einzigartigen Produkt.
 
+
+	<p>
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas">
+<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
+
  <p>         
 </p>
 Neben dem Verkauf von farbigem Kerosin / Benzin (*Naphta) sind wir ebenfalls in den Bereichen Web-Services sowie Datenschutz und -sicherheit & mehr tätig. Wir bieten Schulungen und Beratungen zu Themen wie VPN, Webbrowser, Künstliche Intelligenz (Einkaufsanalyse), Cloud- und Web-Dienste, Speicheroptimierung und Grafikdesign an. Unsere Dienstleistungen umfassen auch den Aufbau und die Verwaltung von Servern, den Schutz von Daten, sowie Proxy- und Tor-Dienste für sichere Datentunnel.
@@ -101,6 +108,11 @@ Neben dem Verkauf von farbigem Kerosin / Benzin (*Naphta) sind wir ebenfalls in 
 
 
 
+ <p>         
+</p>
+
+<a href="https://www.ebay.de/usr/vitaforas"> 
+<img src="fuel9.jpg" alt="7" width="100%" height="auto"></a>
    
 
  <p>         
@@ -108,27 +120,23 @@ Neben dem Verkauf von farbigem Kerosin / Benzin (*Naphta) sind wir ebenfalls in 
 vitaforas begann als kleines Unternehmen, das von zuhause aus betrieben wurde. Was als Hobby begann, entwickelte sich schnell zu einer Leidenschaft als IT-ingenieur und für die Herstellung von farbigem Kerosin. Mit unserer Erfahrung als Programmierer und Erforschung von Marktlücken konnten wir unseren Erfindergeist nutzen, um diese einzigartige Mischung zu entwickeln.
 
 	
- <p>         
-</p>
-
-<a href="https://www.ebay.de/usr/vitaforas"> 
-<img src="fuel9.jpg" alt="7" width="100%" height="auto"></a>
 <p>
 
 </p>
 
-	<p>
-</p>
 
-<a href="https://www.ebay.de/usr/vitaforas">
-<img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
+<p> 
+</p>         
+ Scan Me 📱
+<a href="https://www.gs1.org/services/verified-by-gs1/results">
+<img src="EAN1.jpg" alt="7" width="100%" height="auto"></a>
 
  <p>         
 </p>
 # Colour Fuel - (Bunt) farbiges Kerosin *Naphta Colorierter Kraftstoff 'farbenfroh' Die formel ist eine Einzigartige gut bewahrte Rezeptur, Mischung die zu diesem farb Ergebnis führt. Einziger Vertrieb Verkauf in Deutschland bestellen Bestellung kaufen
 Farbig bunt buntes farbiges kerosin Benzin färben von sprit zippo liquid flüssig Brennstoff Händler Unternehmen 
 Programmierer Marktlücke Erfindergeist Forschung Privat Schulung Wattefreie retro ww1 ww2 feuerzeug Sammlerstücke Ohne watte
-Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von zuhause versand Bestellungen Drop shipping, e commerze, web Design, server Administration, spiele Entwickler, hacker, daten verkauf, data privacy security, strict delete all, no user data, Aufbau unter dem Motto daten Sicherheit. Vpn, web browwser, ki (Einkausanalyse), cloud & web-Dienste, Speicher, grafiker,ip, ddns, proxy, tor, daten tunnel, Verpackungsdesign, ausbau, produktion. 'colour' blau rot lila violett grün gelb rot *pink skyblue ocean blau 20ml 100ml 250ml 500ml Flaschen Gläschen Dosen  Abfüllung in Recyclebare Verpackung (low waste) 📬
+Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von zuhause versand Bestellungen Drop shipping, e commerze, web Design, server Administration, spiele Entwickler, data privacy policy, cybersecurity, strict delete all, no user data, Aufbau unter dem Motto daten Sicherheit. Vpn, web browwser, ki (Einkausanalyse), cloud & web-Dienste, Speicher, grafiker,ip, ddns, proxy, tor, daten tunnel, Verpackungsdesign, ausbau, produktion. 'colour' blau rot lila violett grün gelb rot *pink skyblue ocean blau 20ml 100ml 125 250ml 500ml Flaschen Gläschen Dosen  Abfüllung in Recyclebare Verpackung (low waste) 📬
 
 
 <p>         
@@ -171,11 +179,6 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 
 </p>         
  
-<p> 
-</p>         
- Scan Me 📱
-<a href="https://www.gs1.org/services/verified-by-gs1/results">
-<img src="EAN1.jpg" alt="7" width="100%" height="auto"></a>
 
 <p> 
 
