Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von 
 </p>
 
 <a href="https://www.ebay.de/usr/vitaforas"> 
-<img src="Dia1.jpg" alt="7" width="100%" height="auto"></a>
+<img src="Umsatz.jpg" alt="7" width="100%" height="auto"></a>
 
 <p>         
 </p>
