Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Colour Fuel, ist Teil des vitaforas e.V. & stolz darauf, buntes Benzin herzustel
 
  <p>         
 </p>
-Neben dem Verkauf von farbigem Kerosin / Benzin (*Naphta) sind wir ebenfalls in den Bereichen Web-Services sowie Datenschutz und -sicherheit & mehr tätig. Wir bieten Schulungen und Beratungen zu Themen wie VPN, Webbrowser, Künstliche Intelligenz (Einkaufsanalyse), Cloud- und Web-Dienste, Speicheroptimierung und Grafikdesign an. Unsere Dienstleistungen umfassen auch den Aufbau und die Verwaltung von Servern, den Schutz von Daten, sowie Proxy- und Tor-Dienste für sichere Datentunnel.
+Neben dem Verkauf von farbigem Kerosin / Feuerzeugbenzin (*Naphta) sind wir ebenfalls in den Bereichen Web-Services sowie Datenschutz und -sicherheit & mehr tätig. Wir bieten Schulungen und Beratungen zu Themen wie VPN, Webbrowser, Künstliche Intelligenz, (Einkaufsanalyse),privates Hosting,Cloud- und Web-Dienste, Speicheroptimierung und Grafikdesign an. Benötigen Sie noch einen Online Auftritt für Ihr Unternehmen ? Kontaktieren Sie uns gern. Unsere Dienstleistungen umfassen auch den Aufbau und die Verwaltung von Servern, den Schutz von Daten, sowie ddns, Proxy- und Tor-Dienste / VPN für sichere Datentunnel. Verschenke deine Daten nicht und schütze dich vor unerwünschter Werbung. #selfHOSTING .- halte deinen Datenstrom unter Kontrolle.
 
 
  <p>         
@@ -96,7 +96,7 @@ Neben dem Verkauf von farbigem Kerosin / Benzin (*Naphta) sind wir ebenfalls in 
 
 
  <p>         
-</p>Besuchen Sie unsere Webseite, um unsere Produkte zu entdecken und Bestellungen aufzugeben. Wir bieten auch Cloud, Webservices und E-Commerce-Dienstleistungen an. Unser Team aus Webdesignern, Spieleentwicklern, Programmierern und Datenexperten steht Ihnen zur Verfügung, um Ihnen den bestmöglichen Service zu bieten.
+</p>Besuchen Sie unsere Webseite, um unsere vielfältigen Angebote und Produkte zu entdecken. Gibst du eine Bestellung auf, so geht die Sendung noch am selben Tag in den Versand. Damit bieten wir einen fast 24H Service und wünschen vollste Zufriedenheit. Wir bieten Webservices, E-Commerce-Dienstleistungen und Cloud Unterstützung an. Unser Team aus Webdesignern, Spieleentwicklern, Programmierern und Datenexperten steht Ihnen zur Verfügung, um Ihnen den bestmöglichen Service zu bieten.
 
 
  <p>         
@@ -117,11 +117,11 @@ Neben dem Verkauf von farbigem Kerosin / Benzin (*Naphta) sind wir ebenfalls in 
 
  <p>         
 </p>
-vitaforas begann als kleines Unternehmen, das von zuhause aus betrieben wurde. Was als Hobby begann, entwickelte sich schnell zu einer Leidenschaft als IT-ingenieur und für die Herstellung von farbigem Kerosin. Mit unserer Erfahrung als Programmierer und Erforschung von Marktlücken konnten wir unseren Erfindergeist nutzen, um diese einzigartige Mischung zu entwickeln.
+vitaforas begann als kleines Unternehmen in Deutschland, Schleswig-Holstein, das von Gewerbe Inhaber Mavi Maeze* (*siehe Impressum) von Zuhause aus betrieben wurde. Was als Hobby begann, entwickelte sich schnell zu einer Leidenschaft zum IT-ingenieur, Software Developer und neben dem Online Handel auch für die Herstellung von farbigem Kerosin. Im Alter von 29 Jahren gründete er sein erstes Unternehmen. Mit der Erfahrung als Programmierer und der Erforschung von Marktlücken konnten wir unseren Erfindergeist nutzen, um diese einzigartige Mischung zu entwickeln und online zum Kauf anzubieten.
 
 	
 <p>
-
+Privat verbringt er seine Zeit am liebsten Unterwasser und bietet auch zu dieser Tätigkeit passende Dienstleistung wie an wie Ausflüge und einen Tauchservice für verlorene Gegenstände.
 </p>
 
 
@@ -133,10 +133,11 @@ vitaforas begann als kleines Unternehmen, das von zuhause aus betrieben wurde. W
 
  <p>         
 </p>
-# Colour Fuel - (Bunt) farbiges Kerosin *Naphta Colorierter Kraftstoff 'farbenfroh' Die formel ist eine Einzigartige gut bewahrte Rezeptur, Mischung die zu diesem farb Ergebnis führt. Einziger Vertrieb Verkauf in Deutschland bestellen Bestellung kaufen
-Farbig bunt buntes farbiges kerosin Benzin färben von sprit zippo liquid flüssig Brennstoff Händler Unternehmen 
-Programmierer Marktlücke Erfindergeist Forschung Privat Schulung Wattefreie retro ww1 ww2 feuerzeug Sammlerstücke Ohne watte
-Mit Sichtfenster Einzigartig Begann als kleines Unternehmen, Zuhaus, hobby, von zuhause versand Bestellungen Drop shipping, e commerze, web Design, server Administration, spiele Entwickler, data privacy policy, cybersecurity, strict delete all, no user data, Aufbau unter dem Motto daten Sicherheit. Vpn, web browwser, ki (Einkausanalyse), cloud & web-Dienste, Speicher, grafiker,ip, ddns, proxy, tor, daten tunnel, Verpackungsdesign, ausbau, produktion. 'colour' blau rot lila violett grün gelb rot *pink skyblue ocean blau 20ml 100ml 125 250ml 500ml Flaschen Gläschen Dosen  Abfüllung in Recyclebare Verpackung (low waste) 📬
+# Colour Fuel - (Bunt) farbiges Kerosin *Naphta Colorierter Kraftstoff 'farbenfroh' Die Formel ist eine Einzigartige gut bewahrte Rezeptur, die zu diesem Farb Ergebnis führt. 
+
+Stickworte ### Retro Lighter Fuel coloured Buy Order Seller Amazon eBay Einziger Vertrieb Verkauf in Deutschland bestellen Bestellung kaufen verkaufen Farbig bunt buntes farbiges kerosin Benzin färben von Sprit Zippo Liquid flüssig Brennstoff Händler Unternehmen 
+Programmierer Erfindergeist Forschung Privat Schulung Wattefreie Retro ww1 ww2 Feuerzeug Sammlerstücke ohne Watte visible tank
+mit Sichtfenster Einzigartig Begann als kleines Unternehmen, private Schulung, Interesse, Freizeit, Zuhaus, Hobby, Versand Bestellungen Dropshipping, E-Commerce, Webdesign, Server Administration, Spiele Entwickler, Data privacy policy, Cybersecurity, strict delete all, no user data, Aufbau unter dem Motto daten Sicherheit. Vpn, Web-Browser, ki (Einkausanalyse), cloud & Web-Dienste, Speicher, grafiker,ip, ddns, proxy, Tor, Daten Tunnel, Verpackungsdesign, Ausbau, Produktion. 'colour' blau rot lila violett grün gelb rot *pink skyblue ocean blau 20ml 100ml 125ml 150ml 250ml 500ml Flaschen Gläschen Dosen  Abfüllung in Recyclebare Verpackung (low waste) 📬
 
 
 <p>         
