Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -217,11 +217,12 @@ Made with pride in Germany 🇩🇪
 	<p>
 </p>
 
+<center>
 <p>UN (BAM) Gefahrgut Zulassung für Flüssigstoffe 
 <a href="UN.pdf">
 <img src="UN.jpg" alt="9910" width="50%" height="auto"></a>
 </p>
-
+</center>
 
 	<p>
 </p>
