Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Made with pride in Germany 🇩🇪
 <input type="button" value="🛒🛍️" onClick="self.location.href=('https://www.ebay.de/usr/vitaforas')">
 </form>          
 	<p>     
-Menge: 20ml je 5€, 100ml je 20€, 125ml je 27,99€, 500ml je 70€
+Menge: 20ml je 6,99€, 150ml je 30,99€, 500ml je 89,99€
        
 	</p>         
 	<p>    Farben: Blau, Gelb, Rot, Grün, Lila, *Pink
