Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Made with pride in Germany 🇩🇪
 </p>
 
 
-<p>UN (BAM) Gefahrgut Zulassung für Flüssigstoffe 
+<p>[BAM] UN Gefahrgut Zulassung für Flüssigstoffe 
 <a href="UN.pdf">
 <img src="UN.jpg" alt="9910" width="50%" height="auto"></a>
 </p>
