Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ mit Sichtfenster Einzigartig Begann als kleines Unternehmen, private Schulung, I
 </p>
 
 <a href="https://www.ebay.de/usr/vitaforas"> 
-<img src="Umsatz.jpg" alt="7" width="100%" height="auto"></a>
+<img src="stat.jpg" alt="7" width="100%" height="auto"></a>
 
 <p>         
 </p>
