Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ mit Sichtfenster Einzigartig Begann als kleines Unternehmen, private Schulung, I
  <p>         
 </p>
 Unsere Produkte werden mit umweltfreundlichen, recyclebaren Verpackungen angeboten, um den Ansprüchen an Nachhaltigkeit gerecht zu werden.
+*Erdöl ist eine wichtige Ressource mit der wir alle versandortungsvoll umgehen sollten.
 
  <p>         
 Wir bieten 6 verschiedene Farben          
