Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@ Made with pride in Germany 🇩🇪
 <img src="UN.jpg" alt="9910" width="50%" height="auto"></a>
 </p>
 
+<script src="https://www.paypal.com/sdk/js?client-id=BAA-JKfykZsqmzCccJI2Mkub6zd2FNcDIG3ZKrG0a6BrWSXeOmXauxVeBvaf0PI3leLbqEu25tNg-omYjc&components=hosted-buttons&disable-funding=venmo&currency=EUR"></script>
+<div id="paypal-container-AVGGDK8NQSSAW"></div>
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "AVGGDK8NQSSAW",
+  }).render("#paypal-container-AVGGDK8NQSSAW")
+</script>
 
 	<p>
 </p>
