--- a/index.html
+++ b/index.html
@@ -361,7 +361,13 @@ Discribe as Donation
 
 </p>
 	<p>
-
+<script src="https://www.paypal.com/sdk/js?client-id=BAA-JKfykZsqmzCccJI2Mkub6zd2FNcDIG3ZKrG0a6BrWSXeOmXauxVeBvaf0PI3leLbqEu25tNg-omYjc&components=hosted-buttons&disable-funding=venmo&currency=EUR"></script>
+<div id="paypal-container-UKDHUBFM42NNQ"></div>
+<script>
+  paypal.HostedButtons({
+    hostedButtonId: "UKDHUBFM42NNQ",
+  }).render("#paypal-container-UKDHUBFM42NNQ")
+</script>
 </p>
 
 
