--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Home</a></li>
-								<li><a href="#work">Selection</a></li>
+								<li><a href="#work">BUY</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
