Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -224,13 +224,17 @@ Made with pride in Germany 🇩🇪
 <img src="UN.jpg" alt="9910" width="50%" height="auto"></a>
 </p>
 
+
 <script src="https://www.paypal.com/sdk/js?client-id=BAA-JKfykZsqmzCccJI2Mkub6zd2FNcDIG3ZKrG0a6BrWSXeOmXauxVeBvaf0PI3leLbqEu25tNg-omYjc&components=hosted-buttons&disable-funding=venmo&currency=EUR"></script>
-<div id="paypal-container-AVGGDK8NQSSAW"></div>
+<div id="paypal-container-UKDHUBFM42NNQ"></div>
 <script>
   paypal.HostedButtons({
-    hostedButtonId: "AVGGDK8NQSSAW",
-  }).render("#paypal-container-AVGGDK8NQSSAW")
+    hostedButtonId: "UKDHUBFM42NNQ",
+  }).render("#paypal-container-UKDHUBFM42NNQ")
 </script>
+
+
+
 
 	<p>
 </p>
@@ -244,7 +248,7 @@ Menge: 20ml je 6,99€, 150ml je 30,99€, 500ml je 89,99€
 	<p>    Farben: Blau, Gelb, Rot, Grün, Lila, *Pink
 </p>     
 
-
++ 5,49€ Versand 📬
 
 	<p>
 </p>
