Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Colour Fuel, ist Teil des vitaforas e.V. & stolz darauf, buntes Benzin herzustel
 	<p>
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas">
+<a href="https://www.ebay.de/usr/vitaf0ras">
 <img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
 
  <p>         
@@ -111,7 +111,7 @@ Neben dem Verkauf von farbigem Kerosin / Feuerzeugbenzin (*Naphta) sind wir eben
  <p>         
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas"> 
+<a href="https://www.ebay.de/usr/vitaf0ras"> 
 <img src="fuel9.jpg" alt="7" width="100%" height="auto"></a>
    
 
@@ -143,33 +143,33 @@ mit Sichtfenster Einzigartig Begann als kleines Unternehmen, private Schulung, I
 <p>         
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas"> 
+<a href="https://www.ebay.de/usr/vitaf0ras"> 
 <img src="https://123.vitaforas.de/ebay.jpg" alt="7" width="100%" height="auto"></a>
  <p>         
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas"> 
+<a href="https://www.ebay.de/usr/vitaf0ras"> 
 <img src="https://123.vitaforas.de/b3.jpg" alt="7" width="100%" height="auto"></a>
  <p>         
 </p>
 <p>         
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas"> 
+<a href="https://www.ebay.de/usr/vitaf0ras"> 
 <img src="https://123.vitaforas.de/b1.jpg" alt="7" width="100%" height="auto"></a>
 
 
 <p>         
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas"> 
+<a href="https://www.ebay.de/usr/vitaf0ras"> 
 <img src="https://123.vitaforas.de/b2.jpg" alt="7" width="100%" height="auto"></a>
 
 
 <p>         
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas"> 
+<a href="https://www.ebay.de/usr/vitaf0ras"> 
 <img src="stat.jpg" alt="7" width="100%" height="auto"></a>
 
 <p>         
@@ -239,7 +239,7 @@ Made with pride in Germany 🇩🇪
 	<p>
 </p>
       	<form name="eKiwiButton">
-<input type="button" value="🛒🛍️" onClick="self.location.href=('https://www.ebay.de/usr/vitaforas')">
+<input type="button" value="🛒🛍️" onClick="self.location.href=('https://www.ebay.de/usr/vitaf0ras')">
 </form>          
 	<p>     
 Menge: 20ml je 6,99€, 150ml je 30,99€, 500ml je 89,99€
@@ -253,7 +253,7 @@ Menge: 20ml je 6,99€, 150ml je 30,99€, 500ml je 89,99€
 	<p>
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas">
+<a href="https://www.ebay.de/usr/vitaf0ras">
 <img src="5farben.jpg" alt="7" width="100%" height="auto"></a>	
 
  <p>         
@@ -262,14 +262,14 @@ Menge: 20ml je 6,99€, 150ml je 30,99€, 500ml je 89,99€
 	<p>
 </p>
 
-<a href="https://www.ebay.de/usr/vitaforas">
+<a href="https://www.ebay.de/usr/vitaf0ras">
 <img src="order.jpg" alt="7" width="100%" height="auto"></a>
 
              
 <p>         
 </p>
 
-<a href="https://www.paypal.me/vitaforas"> 
+<a href="https://www.paypal.me/vitaf0ras"> 
 <img src="paypal.png" alt="7" width="100%" height="auto"></a>
 
 or Pay via Paypal (Verwendungszweck=Bestellung+Lieferadresse)
