Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -250,7 +250,23 @@ Menge: 20ml je 6,99€, 150ml je 30,99€, 500ml je 89,99€
 
 + 5,49€ Versand 📬
 
-	<p>
+	<p>Buntes farbiges Feuerzeugbenzin Kerosin in gelb.
+
+Feuerzeug Benzin 'gelb' 20ml
+
+Für Wattefreie Benzinfeuerzeuge mit Sichtfenster.
+
+*Artikel Farbe kann vom Artikel abweichen (Lichtverhältnissene etc.)
+
+*Verpackung kann vom Foto des Artikels abweichen (Versand kosten Minderung in Planung)
+
+*ohne Feuerzeug. Nur zu Anschauungszwecken.
+
+*shake before use
+
+*could occure in earlyer dead of your lighter or wick.
+
+Sie erhalten 20ml Feuerzeug Benzin in gelb
 </p>
 
 <a href="https://www.ebay.de/usr/vitaf0ras">
