Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <center>
       [[ Colour Fuel ⛽ Official Website ]]
 	<p>
+<a href='https://postimg.cc/k6q0hd01' target='_blank'><img src='https://i.postimg.cc/k6q0hd01/buntes-Feuerzeug-Benzin-kaufen.jpg' width="100%" height="auto" border='0' alt='buntes-Feuerzeug-Benzin-kaufen'/></a>
 </p>
 
 <a href="https://www.ebay.de/usr/vitaforas">
